@@ -1,3 +1,10 @@
+Sat Dec 30 23:00:47 2000  George Lebl <jirka@5z.com>
+
+	* panel.c, main.c, panel-util.[ch], menu.c, session.c, drawer.c:
+	  Various cleanups, use of string_empty and sure_string, also relayer
+	  dialogs after change of default layer and don't put dialogs
+	  in dock when panels are in normal layer.
+
 Sat Dec 30 05:27:19 2000  George Lebl <jirka@5z.com>
 
 	* xstuff.[ch], global-keys.c, swallow.c:  Use gwmh for everything
